--- a/views/head.erb
+++ b/views/head.erb
@@ -8,7 +8,7 @@
   <meta name="description" content="My awesome game">
   <meta name="author" content="Pablo">
 
-  <%# <link rel="stylesheet" href="/css/styles.css?v=1.0"> %>
+  <link rel="stylesheet" href="/css/styles.css?v=1.0">
 
 </head>
 
