--- a/views/play.erb
+++ b/views/play.erb
@@ -1,6 +1,9 @@
 <%= erb :head %>
-<h1><%= @name1 %> vs. <%= @name2 %></h1>
-<%= @name2 %>: <span id='player-2-hp'><%= @hp_p2 %></span>HP
+<h1><%= @game.player1.name %> vs. <%= @game.player2.name %></h1>
+<p>
+  <%= @game.player2.name %>:
+  <span id='player-2-hp'><%= @game.player2.hitpoints %></span>HP
+</p>
 <form action='/attack'>
   <input type='submit' value='HADOKEN!'> 
 </form>
