add a streetfighter gif on the /attack page

--- a/views/attack.erb
+++ b/views/attack.erb
@@ -5,6 +5,7 @@
   <%= @game.player2.hitpoints %>
 </span>HP
 </p>
+<img src="img/ryu-fireball.webp" />
 <p>
   <strong>THAT'S GOTTA HURT</strong>
 </p>
