--- a/views/play.erb
+++ b/views/play.erb
@@ -1,5 +1,9 @@
 <%= erb :head %>
-<h1><%= @game.player1.name %> vs. <%= @game.player2.name %></h1>
+<h1>
+  <%= @game.player1.name %> (<%= @game.player1.hitpoints %> HP)
+  vs.
+  <%= @game.player2.name %>
+</h1>
 <p>
   <%= @game.player2.name %>:
   <span id='player-2-hp'><%= @game.player2.hitpoints %></span>HP
