--- a/views/attack.erb
+++ b/views/attack.erb
@@ -5,11 +5,11 @@
   <%= @game.player2.hitpoints %>
 </span>HP
 </p>
-<img src="img/ryu-fireball.webp" />
+<img class="player-2" src="img/ken-shoryu-ken.webp" />
 <p>
   <strong>THAT'S GOTTA HURT</strong>
 </p>
 
-<a href='/play'>Go another round</a>
+<a href='/play'>Next turn</a>
 
 <%= erb :foot %>
